# chchanges

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
changes/: bayesian_online.py  detect.py  pelt.py  test_bayesian_online.py  test_detect.py
changes/demos/: mean.py  variance.py
changes/test/: test_bayesian_online.py
chchanges/: bayesian_online.py
chchanges.egg-info/: PKG-INFO  SOURCES.txt
chchanges/demos/: mean.py  variance.py
chchanges/test/: test_bayesian_online.py
